# LRSIM

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run-docker.sh  run-simulations.sh  test_topological_routing.py
.github/workflows/: ci.yml
leopath/: logger.py  main.py
leopath/network_state/: generate_network_state.py  helpers.py
leopath/satellite_visualisation/: visualise_constellation.py
leopath/topology/: constellation.py  distance_tools.py  ground_station.py  isl.py  topology.py
lrsim/: main.py
lrsim/network_state/: generate_network_state.py  helpers.py
lrsim/satellite_visualisation/: visualise_constellation.py
lrsim/tles/: generate_tles_from_scratch.py  read_tles.py
lrsim/topology/: constellation.py  distance_tools.py  ground_station.py  isl.py  topology.py
src/: __init__.py  logger.py  main.py
src/config/: ether.yaml  ether_simple.yaml
src/distance_tools/: __init__.py  distance_tools.py
src/dynamic_state/: algorithm_free_one_only_over_isls.py  fstate_calculation.py  generate_dynamic_state.py  helper_dynamic_state.py  topology.py
src/examples/: ether_demo.py  ether_demo_full.py  ether_demo_test.py  explore_results.py  run_starlink_full_constellation_no_isls.py  run_starlink_plane_example.py  run_starlink_plane_many_gs.py  starlink_constellation.txt  starlink_first_shell.txt
src/ground_stations/: extend_ground_stations.py  read_ground_stations.py
src/network_state/: fstate_calculation.py  generate_dynamic_state.py  generate_network_state.py  helpers.py
src/post_analysis/: __init__.py  analyze_path.py  analyze_rtt.py  (+10 more)
tests/: test_description.py  test_distance_tools.py  test_dynamic_state.py  test_end_to_end_kuiper_duo.py  test_end_to_end_kuiper_triangle.py  test_fstate_calculation.py  test_graph_utils.py  test_ground_stations.py  test_gsl_interfaces_info.py  test_isls.py  test_tles.py
(+103 files in other folders)
