[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leopath"
version = "0.1.0"
description = "A user-friendly, extensible Python-based simulator for analyzing routing algorithms in LEO satellite constellations."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Sergio Gimenez", email = "sergio.gimenez@i2cat.net"},
  {name = "Eduard Grasa", email = "eduard.grasa@i2cat.net"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dynamic = ["dependencies"]

[project.scripts]
lrsim = "lrsim.main:main"

[project.urls]
"Homepage" = "https://github.com/Fundacio-i2CAT/LRSIM"
"Bug Tracker" = "https://github.com/Fundacio-i2CAT/LRSIM/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["lrsim*"]

[tool.setuptools.package-data]
"lrsim" = ["**/*.yaml", "**/*.html", "**/*.js", "**/*.css", "**/*.png"]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["livecov"]
omit = [
    "lrsim/tests/*",
    "lrsim/__init__.py",
    "lrsim/logger.py",
    "lrsim/satellite_visualisation/*",
]

[tool.pytest.ini_options]
addopts = "--cov-report xml:cov.xml --cov lrsim"
testpaths = ["tests"]
log_cli = true
log_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
